Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1764

Log block manager leaks disk space at the end of full containers

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • 1.0.0, 1.1.0
    • 1.2.0
    • fs
    • None

    Description

      阿香 reported on the mailing list that his total disk space usage is significantly more than the metric reported by the LBM usage metric.

      Adar and I investigated and found the likely cause: when writing to LBM containers, the LBM preallocates disk space at the end of the file where the next blocks will be written. However, the preallocated space can extend past the "full" container size, and when the container is declared full, we don't truncate or punch away that preallocated space.

      Thus, even when a container has been mostly punched out, we still end up with ~15-30MB of wasted disk space at the end.

      Attachments

        Activity

          People

            adar Adar Dembo
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: